--- a/tutorials/workflow_rna_editing.ipynb
+++ b/tutorials/workflow_rna_editing.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "We are now ready to train a model using the data. The basic architecture of the network consists of a variable number of convolutional and max-pooling layers followed by a variable number of dense layers. These layers are interspersed by dropout layers after the input layer and after every max-pooling and dense layer. The number of convolutional layers, the number of kernels, the length of kernels, dropout rates, etc. are all parameters that can be provided by the user\n",
     "\n",
-    "We will run a small hyperparameter grid search training 2 different models for the sake of the tutorial. We define lists of potential parameter values and the Grid_Search object will train all models on the training data and return the single model with the highest ROC-AUC on the validation data. In this case we will try models with either 1 or 2 convolutional layers. All convolutional layers will have 20 kernels, each of length 20. Parameters that are not defined in the \"params\" variable will have default values (see Model API doc).\n",
+    "We will run a small hyperparameter grid search training 4 different models for the sake of the tutorial. We define lists of potential parameter values and the Grid_Search object will train all models on the training data and return the single model with the highest ROC-AUC on the validation data. In this case we will try models with either 1 or 2 convolutional layers and input dropout rates of 0.1 or 0.4. All convolutional layers will have 20 kernels, each of length 20. Parameters that are not defined in the \"params\" variable will have default values (see Model API doc).\n",
     "\n",
     "If you don't want to do a grid search you can also directly train a single model:\n",
     "```\n",
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given predictions and labels we can now create ROC and precision-recall curve plots and get an overview of a number of performance metrics. In a multi-class setting metrics are computed in 1 vs. all approach, as they are only really defined for binary classifications. Average values are weighted by the number sequences 'n' in each class. You can get higher-quality output images by saving as pdf instead of png."
+    "Given predictions and labels we can now create ROC and precision-recall curve plots and get an overview of a number of performance metrics. In a multi-class setting metrics are computed in 1 vs. all approach, as they are only really defined for binary classifications. Average values are weighted by the number of sequences 'n' in each class. You can get higher-quality output images by saving as pdf instead of png."
    ]
   },
   {
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next image shows the positional enrichment of the kernel, that is, the position of the maximum activations as talked about earlier (the histograms). The plots below the histograms show the mean activations for all sequence positions (+/- standard deviation as a light band). Both plots are only based on sequences that led to a maximum activation higher than a certain threshold (the maximum average max activation, see class_0 in the plot above). Histogram and mean activation plot are usually identical, but in case the histogram is very sparse or classes are inbalanced the mean activation plot might be easier to look at.\n",
+    "The next image shows the positional enrichment of the kernel, that is, the position of the maximum activations as talked about earlier (the histograms). The plots below the histograms show the mean activations for all sequence positions (+/- standard deviation as a light band). Both plots are only based on sequences that led to a maximum activation higher than a certain threshold (the maximum average max activation, see class_0 in the plot above). Histogram and mean activation plot are usually identical, but in case the histogram is very sparse or classes are imbalanced the mean activation plot might be easier to look at.\n",
     "\n",
     "In this case, we only have a strong signal for the ALU class and if we have a closer look we can see that the motif has its strongest enrichment at position 150 and 151. As mentioned at the very beginning the editing position is always at position 151, indicating that the two A's at the beginning of our motif might be often edited (if you read this on github and the image is too small right-click it and click View/Open image in new tab):"
    ]
