add basic tests for position-wise features + small fixes + doc

--- a/tutorials/workflow_rna_editing.ipynb
+++ b/tutorials/workflow_rna_editing.ipynb
@@ -189,7 +189,7 @@
    "source": [
     "## Performance Evaluation\n",
     "\n",
-    "We can now perform the final evaluation of our model on the test data. Calling the predict functions returns an array of shape (number of sequences, number of classes) holding predicted probabilites. Instead of passing \"test\" to the function you can also pass \"train\", \"val\" or \"all\". If you want to do predictions on a completely different Data object, make sure that the sequences in this Data object have the same length as the sequences you used for model training. Pass \"all\" to the predict function to get predictions for all sequences in a non-random order (that is, the order in which sequences where loaded from the fasta file)."
+    "We can now perform the final evaluation of our model on the test data. Calling the predict function returns an array of shape (number of sequences, number of classes) holding predicted probabilities. Instead of passing \"test\" to the function you can also pass \"train\", \"val\" or \"all\". If you want to do predictions on a completely different Data object, make sure that the sequences in this Data object have the same length as the sequences you used for model training. Pass \"all\" to the predict function to get predictions for all sequences in a non-random order (that is, the order in which sequences where loaded from the fasta file)."
    ]
   },
   {
